fix z-index for navbar

--- a/core/static_src/core/scss/components/block-header.scss
+++ b/core/static_src/core/scss/components/block-header.scss
@@ -90,7 +90,7 @@
     left: 50%;
     transform: translate(-50%, 0);
     max-width: 1000px;
-    z-index: 100;
+    z-index: 10;
     text-align: center;
     padding-top: 10px;
   }
@@ -99,7 +99,7 @@
 .block-header + .block-button {
   position: relative;
   height: 10px;
-  z-index: 100;
+  z-index: 10;
   text-align: center;
   .button {
     @include shadow(4);
