--- a/core/static_src/core/scss/components/block-teaser.scss
+++ b/core/static_src/core/scss/components/block-teaser.scss
@@ -56,7 +56,7 @@ $teaser-angle: -5deg;
       background-repeat: no-repeat;
       background-size: 100%;
       background-position: bottom, top;
-      z-index: 100;
+      z-index: 10;
     }
   }
 
@@ -95,7 +95,7 @@ $teaser-angle: -5deg;
   &__content {
     color: $white;
     position: relative;
-    z-index: 100;
+    z-index: 10;
     text-align: center;
   }
 
@@ -142,7 +142,7 @@ $teaser-angle: -5deg;
    position: relative;
    top: -100px;
    margin-bottom: -75px;
-   z-index: 100;
+   z-index: 10;
 
   @include above($medium) {
     top: -200px;
